--- a/gb/23/2/19/n13933048.md
+++ b/gb/23/2/19/n13933048.md
@@ -8,7 +8,7 @@
 <hr>
 	<p>【大纪元2023年02月19日讯】（大纪元记者刘景烨波士顿报导）2月18日是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%A2%E5%A3%AB%E9%A1%BF%E8%8D%A3%E5%85%89%E8%81%94%E8%B0%8A%E4%BC%9A.md#1">波士顿荣光联谊会</a>睽违3年的会员大会。台湾驻美代表处<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%80%80%E4%BC%8D%E5%86%9B%E4%BA%BA.md#1">退伍军人</a>事务组来到纽英崙中华公所会场，向会员们报告了在美国修建<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E6%B0%91%E5%9B%BD.md#1">中华民国</a>二战空军纪念碑的项目。</p>
 <p>当天，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%80%80%E4%BC%8D%E5%86%9B%E4%BA%BA.md#1">退伍军人</a>事务组组长倪邦臣和秘书程国峰从华府来到波士顿参与会议。倪邦臣说，在二战期间，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E6%B0%91%E5%9B%BD.md#1">中华民国</a>有很多空军在美国受训，其中有60人因事故而殉职。他们大部分被葬在德州的军人公墓，也有一些在乔治亚州。今年退伍军人组的一项重要工作，就是在这两处墓园修建纪念碑，以让人们铭记中华民国的军人。</p>
-<figure id="attachment_13933010" aria-describedby="caption-attachment-13933010" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933010-DSC04722.jpg"><img class="size-large wp-image-13933010" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933010-DSC04722-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13933010" class="wp-caption-text">2月18日，台驻美退伍军人事务组组长倪邦臣携夫人参加波士顿<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8D%A3%E5%85%89%E4%BC%9A.md#1">荣光会</a>的会员大会。（刘景烨/大纪元）</figcaption></figure>
+<figure id="attachment_13933010" aria-describedby="caption-attachment-13933010" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933010-DSC04722.jpg"><img class="size-large wp-image-13933010" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933010-DSC04722-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13933010" class="wp-caption-text">2月18日，台驻美退伍军人事务组组长倪邦臣携夫人黄丽辉参加波士顿<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8D%A3%E5%85%89%E4%BC%9A.md#1">荣光会</a>的会员大会。（刘景烨/大纪元）</figcaption></figure>
 <p>曾参加长沙会战的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8D%A3%E5%85%89%E4%BC%9A.md#1">荣光会</a>监事长黄福昇说，波士顿附近也有中华民国陆军军人的墓碑，希望这些军人也能得到纪念。</p>
 <figure id="attachment_13933011" aria-describedby="caption-attachment-13933011" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933011-DSC04726.jpg"><img class="size-large wp-image-13933011" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933011-DSC04726-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13933011" class="wp-caption-text">曾参加长沙会战的荣光会监事长黄福昇在荣光会的会议中说，期待波士顿地区有纪念中华民国军人的纪念碑。（刘景烨/大纪元）</figcaption></figure>
 <p>倪邦臣还谈到，5月底的国殇日（Memorial Day）华府游行将有中华民国退伍军人的队伍和国旗，希望波士顿荣光会成员也能到场参加。</p>
@@ -17,53 +17,49 @@
 <figure id="attachment_13933008" aria-describedby="caption-attachment-13933008" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933008-DSC04700.jpg"><img class="size-large wp-image-13933008" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933008-DSC04700-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13933008" class="wp-caption-text">在2月18日的波士顿荣光会会员大会中，全体来宾起立唱中华民国国歌。（刘景烨/大纪元）</figcaption></figure>
 <p>随后，波士顿荣光会理事长袁建业欢迎来宾。他说，过去两年虽然没有开会员大会，但荣光会仍然积极支持本地的侨胞活动，例如元旦升旗、国庆游行等等。他感谢嘉宾们莅临，并向在场各位送上新年祝福。</p>
 <p>会员江文玲和张伟林报告了去年的会务情况。在退伍军人组、波士顿经文处、侨教中心及各位会员的支持下，荣光会去年的财务收支基本平衡。今年荣光会将有职员选举，凡缴纳会费的成员皆可参与。</p>
+<figure id="attachment_13933057" aria-describedby="caption-attachment-13933057" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933057-DSC04719.jpg"><img class="size-large wp-image-13933057" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933057-DSC04719-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13933057" class="wp-caption-text">荣光会的江文玲报告会务。（刘景烨/大纪元）</figcaption></figure>
+<figure id="attachment_13933058" aria-describedby="caption-attachment-13933058" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933058-DSC04720.jpg"><img class="size-large wp-image-13933058" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933058-DSC04720-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13933058" class="wp-caption-text">荣光会的张伟林报告会务。（刘景烨/大纪元）</figcaption></figure>
 <p>驻波士顿台北经济文化办事处处长孙俭元、侨教中心主任潘昭荣也到中华公所参与了会议，并向会员们送上祝福。孙俭元说，他的父母都是职业军人，他亦为在场各位参军报效国家的经历而感动。他代表经文处感谢各位支持过去一年的各项活动，并期待与大家继续合作，以及接受各位的指教。</p>
-<figure id="attachment_13933012" aria-describedby="caption-attachment-13933012" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933012-DSC04732.jpg"><img class="size-large wp-image-13933012" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933012-DSC04732-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13933012" class="wp-caption-text">2月18日波士顿荣光会年度会议，到场的成员及嘉宾合影。（刘景烨/大纪元）</figcaption></figure>
+<figure id="attachment_13933055" aria-describedby="caption-attachment-13933055" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933055-DSC04705.jpg"><img class="size-large wp-image-13933055" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933055-DSC04705-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13933055" class="wp-caption-text">经文处处长孙俭元参加荣光会会议。（刘景烨/大纪元）</figcaption></figure>
+<figure id="attachment_13933056" aria-describedby="caption-attachment-13933056" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933056-DSC04715.jpg"><img class="size-large wp-image-13933056" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933056-DSC04715-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13933056" class="wp-caption-text">侨教中心主任潘昭荣参加荣光会会议。（刘景烨/大纪元）</figcaption></figure>
 <h3><strong>资深会员盼新人加入</strong></h3>
 <p>看到绝大多数会员都是年长者的现状，有参加会议的成员提出，希望会内成员及台湾政府能协助招募更多荣民及家属入会。</p>
 <p>世界各地区的荣光会，是代表中华民国退伍军人的组织。在波士顿成员大会期间，副会长池元山形容，本地会员的现状可谓“接近凋零”。他说，不少从台湾来的新移民都当过兵，他们及家属都有资格加入荣光会。他希望，各位会员和台湾政府都能帮助荣光会多介绍新成员。</p>
+<figure id="attachment_13933059" aria-describedby="caption-attachment-13933059" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933059-DSC04725.jpg"><img class="size-large wp-image-13933059" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933059-DSC04725-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13933059" class="wp-caption-text">荣光会副会长池元山和姐姐池元真讲到他们刚来美国时的趣事。（刘景烨/大纪元）</figcaption></figure>
+<figure id="attachment_13933012" aria-describedby="caption-attachment-13933012" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933012-DSC04732.jpg"><img class="size-large wp-image-13933012" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933012-DSC04732-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13933012" class="wp-caption-text">2月18日波士顿荣光会年度会议，到场的成员及嘉宾合影。（刘景烨/大纪元）</figcaption></figure>
 <p>会员张韵兰也说，由于老会员去世或因故离开，波士顿荣光会正面临后继无人的问题。另一方面，许多老移民的子女不太会中文，不容易也不一定愿意参加荣光会的活动。但张韵兰仍希望老一辈会员们能多多鼓励后辈加入这个团体。◇</p>
 <p>责任编辑：冯文鸾</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/19/11/15/n11658846.md#1">波士顿100届老兵节大游行 荣光会受邀参加</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/4/19/n13715592.md#1">台驻美退伍军人组访问波士顿荣光会</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/20/n13763819.md#1">波士顿华裔退伍军人会庆73周年 司徒文信接掌</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925680.md#1">休士顿荣光会欢庆兔年春宴</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/2/n10186094.md#1" target="_blank">林辉：天安门杀毛案疑点重重 侦案者冤狱七年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/10/23/n8423584.md#1" target="_blank">屡遭拘禁摧残16年 妇坚修法轮功神奇复原</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/7/n10283450.md#1" target="_blank">改革开放总设计师还是“总扼制师”？(上)</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/22/n11402499.md#1" target="_blank">法轮功阿根廷中领馆前反迫害 十年如一日</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928876.md#1">同日出生死亡的缅甸夫妇转生双胞胎 再续前缘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926855.md#1">【救世古鉴】通过色欲门考验  他走过生死关得后福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927497.md#1">中共是贼  中华是国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13929957.md#1">【未解之谜】来自星星的孩子（1）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927255.md#1">【百年真相】部长级高官病亡 悼文捅出惊天黑幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13932250.md#1">【中国禁闻】中共自夸防疫胜利 疫情受害者：这是罪恶</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13932293.md#1">【新闻看点】投资大佬包凡失联 华兴股市暴跌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/18/n13932686.md#1">【马克时空】俄乌战争试金石 盘点乌军明星武器</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931016.md#1">四川电台主持人狱中惨死 同监室友发信哀悼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931443.md#1">北京医院护工：大量新冠后遗症患者去世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931147.md#1">抗争被清场 白发运动遭维稳 武汉人吁国际关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930628.md#1">《狂飙》警员全身穿外国名牌 中共宣传自打脸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13931890.md#1">台乐手孔锵饱受糖尿病之苦 一度暴瘦25公斤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930602.md#1">家中露台多次惊现鹦鹉 周慧敏一一帮取名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931474.md#1">资深港星余子明骨灰运往加国安葬 儿圆父遗愿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931058.md#1">开场一见陈国华就想哭 蔡秋凤难忘录歌磨合期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931046.md#1">乘客在飞机上常犯哪些错误？ 空姐这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926405.md#1">研究：运动产生一种蛋白质 可逆转记忆减退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/12/n13928164.md#1">研究：高蛋白饮食会促进肠道免疫反应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931066.md#1">【美食天堂】吐司面包摇身变成酥脆虾多士</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/18/n13932465.md#1">房贷利率反弹 购房和再融资需求暴跌</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/19/n13933048.htm">波士顿荣光会年会 盼在美建中华民国军人纪念碑</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933048.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
