--- a/gb/23/8/7/n14049669.md
+++ b/gb/23/8/7/n14049669.md
@@ -8,63 +8,54 @@
 <hr>
 <p>【大纪元2023年08月08日讯】（大纪元记者王兰多伦多报导）2/3的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>人表示，现在不是提高<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A2%B3%E7%A8%8E.md#1">碳税</a>的好时机，大多数人表示，他们认为对燃油加税对于应对气候变化无效。</p>
 <p>这是CTV委托纳诺斯民调公司（Nanos Research）进行的一项调查得出的结果，该调查旨在更好地了解<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>人对通过提高燃料价格应对气候变化的看法。</p>
-<p>从东海岸到西海岸，21% 的受访者表示现在是提高<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A2%B3%E7%A8%8E.md#1">碳税</a>的“时机不佳”，46% 的受访者表示现在是“非常糟糕”的时机。</p>
-<p>纳诺斯民调公司创始人兼首席数据科学家尼克·纳诺斯（Nik Nanos） 表示：“在过去一段时间里，人们对碳税在抑制燃料消耗方面的有效性的支持率下降了大约10个百分点。 更重要的是，人们认为它在应对气候变化方面根本没有效果。</p>
-<p>草原省居民<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%8D%E5%AF%B9.md#1">反对</a>增加碳税的情绪最高，79% 的调查受访者认为，提高碳价格的时机并不合适。</p>
+<p>从东海岸到西海岸，21%的受访者表示现在是提高<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A2%B3%E7%A8%8E.md#1">碳税</a>的“时机不佳”，46%的受访者表示现在是“非常糟糕”的时机。</p>
+<p>纳诺斯民调公司创始人兼首席数据科学家尼克·纳诺斯（Nik Nanos） 表示：“在过去一段时间里，人们对碳税在抑制燃料消耗方面的有效性的支持率下降了大约10个百分点。 更重要的是，人们认为它在应对气候变化方面根本没有效果。”</p>
+<p>草原省居民<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%8D%E5%AF%B9.md#1">反对</a>增加碳税的情绪最高，79%的调查受访者认为，提高碳价格的时机并不合适。</p>
 <p>在大西洋地区，73%的受访者表示时机“不佳”或“非常糟糕”。在魁北克，53%的受访者也表示时机不对。</p>
-<p>65% 的安省受访者和 63% 的卑诗省受访者表示，他们认为碳税并不是鼓励人们减少使用燃料的有效方法。</p>
+<p>65%的安省受访者和63%的卑诗省受访者表示，他们认为碳税并不是鼓励人们减少使用燃料的有效方法。</p>
 <p>与此同时，调查还发现，超过一半（53%）的加拿大人表示联邦碳定价计划在应对气候变化方面无效。</p>
 <h2>加拿大人面临负担能力问题</h2>
-<p>王室山大学（Mount Royal University ）政治学家洛里·威廉姆斯（ Lori Williams）表示，加拿大人仍在与通货膨胀和负担能力问题作斗争。</p>
+<p>王室山大学（Mount Royal University ）政治学家洛里·威廉姆斯（Lori Williams）表示，加拿大人仍在与通货膨胀和负担能力问题做斗争。</p>
 <p>她说：“我认为政府有机会推迟增加碳税的幅度，这样看起来他们也在倾听加拿大人的声音以及他们对负担能力的担忧。”</p>
 <p>“尽管有与碳税相关的退税，但加拿大人加油的成本正在变得越来越高，对于许多人来说，无法与退税相抵消。”</p>
 <p>2019年，联邦政府推出了全国碳税，起始价格为每吨二氧化碳当量排放20元。截至2023年4月1日，碳价上调至每吨65元，并将每年增加15元，直至达到每吨170元。</p>
 <p>责任编辑：严枫</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/3/n14047566.md#1">全球开店 加拿大鹅第一季度净亏损8500万</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/3/n14047464.md#1">帮客户作假 卑诗房贷经纪人被罚五万元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/3/n14047467.md#1">研究：吸毒过量 受害者脑损伤为普通人15倍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/3/n14046877.md#1">Meta：数周内Facebook、Instagram删除所有加拿大新闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/3/n14046878.md#1">统计局：若减少工作时间和压力 加国人会推迟退休</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/3/n14046879.md#1">满银：加拿大油价涨 会再引爆通胀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046834.md#1">山火持续加干旱 卑诗省8月面临挑战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046791.md#1">加拿大总理特鲁多与妻子苏菲分居</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046808.md#1">新民主党领袖访问大西洋省 望大选中取得自由党席位</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106373.md#1">Meta推出公司身份验证 每月收费36.99元</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106346.md#1">继禁抖音后 加拿大禁止政府设备使用微信</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106363.md#1">民调：加拿大人对移民的支持率下降</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106347.md#1">明年酒精税再涨4.7% 纳税人联盟呼吁取消</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106337.md#1">渥太华最低收入家庭 每月工资只够住房和吃饭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106319.md#1">加拿大鼓励黎巴嫩加拿大人 乘商业航班撤离</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106297.md#1">逾五成加拿大年轻人对财务感焦虑</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106277.md#1">旅游需求居高不下 加航第三季度利润飙升</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106260.md#1">民调：超过八成加拿大人为营养吃水产</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106214.md#1">加拿大房价太高 超出家庭养房能力141%</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11257087.md#1" target="_blank">【征文】凌晓辉：贞洁论（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/17/n10916777.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（2）</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/23/n11473593.md#1" target="_blank">林辉：六七香港红潮 新华社分社发动菠萝战</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/6/7/n9237316.md#1" target="_blank">对中国法轮功学员被迫害的调查（3）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046260.md#1">美调查记者：俄战机曾与UFO交战至少45次</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045197.md#1">【未解之谜】释迦座下神通第一 目犍连</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14047678.md#1">【未解之谜】证明轮回存在的基督徒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14042958.md#1">春秋首霸齐桓公享富裕奢华  死况极端凄惨预警成真</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041544.md#1">清代三医生治疫有偏方 以济世之心救人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049427.md#1">【环球直击】中共泄洪民众反抗 警民爆冲突</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048628.md#1">【时事金扫描】中共欲掏空台湾 美华裔间谍被抓</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049549.md#1">【新闻大家谈】中共谎言救灾 民愤催生变数</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048570.md#1">不满造假宣传 河北霸州灾民抗议 爆警民冲突</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14048292.md#1">官媒宣称陆军第82集团军救灾 被村民曝光造假</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14048149.md#1">北京门头沟水库同时泄洪 有村庄几乎被灭顶</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14048276.md#1">刀郎爆红后现身新疆党委学习 官媒报导被秒删</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14048222.md#1">吴镇宇严格指导演技 吓得大陆女团成员落泪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14048210.md#1">日花样滑冰名将羽生结弦宣布结婚 推特曝喜讯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048558.md#1">韩韶禧为工作瘦身：美的标准不能以胖瘦决定</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/6/n14049091.md#1">陈妍希饰演邓丽君 新剧大陆开播日遭闪电撤档</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045425.md#1">每天睡不饱？医师教你3招抗炎 打造不累体质</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/13/n14033232.md#1">58岁医师没有老花、近视  就靠这3招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/22/n14039775.md#1">虾中含砷 与维他命C同吃会砒霜中毒吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046478.md#1">人生不一定要追求完美 八十五分胜一百分</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044381.md#1">驼背导致背痛 你应避免这些动作</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/7/n14049669.htm">大多数加拿大人认为碳税对减排毫无帮助</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049669.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
