--- a/gb/23/12/30/n14147049.md
+++ b/gb/23/12/30/n14147049.md
@@ -14,17 +14,18 @@
 <p>柯文哲表示，台湾不能没有台积电，但台湾也不能只有台积电；台湾需要谨慎思考核能议题，但也不能完全放弃核能，更不能忽略2050净零碳排放的国际趋势。此外，台湾的年轻人需要面对少子化、高龄化、劳动力短缺、缺乏愿景的经济、高教投资不够。我们不能只要求年轻人勇敢，应该更要勇敢打造一个公平的环境，让台湾的年轻人可以在这块土地上追求他们的人生梦想。◇</p>
 <p>责任编辑：昌英</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/10/5/n12455352.md#1">【重播】左右交锋 美副总统候选人辩论会</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/10/8/n12461728.md#1">组图：美国副总统候选人辩论 彭斯对哈里斯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/24/n14003186.md#1">总统候选人柯文哲6月4日访日 将见日本跨党派议员、智库</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122236.md#1">蓝白不合？民众党称柯文哲以总统候选人拼到底</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133753.md#1">【直播预告】台湾总统候选人辩论会14:00登场</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14143737.md#1">【直播】台湾总统候选人电视辩论会今天14:00登场</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147079.md#1">认同宪法？赖提尊重采用、侯喊刻心理、柯认同</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147081.md#1">房产争议 赖清德：我是唯一没炒地炒房的候选人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14146740.md#1">柯文哲主张长照保险 卫福部：存在三大问题</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/11/14/n11656265.md#1" target="_blank">杨宁：东德国防部长之选择给中共军方的启示</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/13/5/15/n3871061.md#1" target="_blank">唐恩：推崇真善忍　褒奖显人心</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/19/n11462628.md#1" target="_blank">可心：香港警察有选择“枪口抬高一寸”的权利</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/6/n11238020.md#1" target="_blank">四百万难治好的脑瘤并发症 修大法痊愈</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140085.md#1">金陵之会 王安石苏轼一笑泯恩仇</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142273.md#1">二个图谶  当前天象的大预言</a></li>
