--- a/gb/23/12/30/n14147062.md
+++ b/gb/23/12/30/n14147062.md
@@ -27,7 +27,7 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147081.md#1">房产争议 赖清德：我是唯一没炒地炒房的候选人</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/10/31/n9788075.md#1" target="_blank">你不了解的邓小平：反右运动总指挥（下）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/23/n11405058.md#1" target="_blank">生死劫后 中共酷刑幸存者吁中国人了解真相</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/7/n10199292.md#1" target="_blank">古玉文：消灭私有制不是出路（上）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/4/9/n11172953.md#1" target="_blank">只做了这一件事 他们绝处逢生（二）</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
